--- a/package.json
+++ b/package.json
@@ -9,17 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.19",
+    "@react-email/tailwind": "^0.0.18",
+    "@react-three/drei": "^9.105.6",
+    "@react-three/fiber": "^8.16.3",
     "@types/node": "20.12.7",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
+    "@types/three": "^0.164.0",
     "autoprefixer": "10.4.19",
+    "cls": "^0.1.5",
+    "clsx": "^2.1.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
+    "framer-motion": "^11.1.7",
     "next": "14.2.3",
+    "particles.js": "^2.0.0",
     "postcss": "8.4.38",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.1.0",
+    "react-intersection-observer": "^9.10.3",
+    "react-vertical-timeline-component": "^3.6.0",
+    "resend": "^0.16.0",
     "tailwindcss": "3.4.3",
-    "typescript": "5.4.5"
+    "three": "^0.164.1",
+    "typescript": "5.4.5",
+    "x": "^0.1.2"
+  },
+  "devDependencies": {
+    "@types/react-vertical-timeline-component": "^3.3.6",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14"
   }
 }
